# phantom

./: .gitignore  .golangci.yml  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  go.mod  go.sum
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build-bpf.yml  ci.yml  pr-checks.yml  release.yml
bpf/core/: events.c
cmd/agent/: main.go
cmd/cli/: main.go
deploy/systemd/: phantom-agent.service
docs/: README.md  architecture.md  coding-standards.md  command-spec.md  ebpf-parameters.md  mcp.md  near-maturity-inventory.md  ops.md  roadmap.md  testing.md  vmlinux.md
lib/: README.md
lib/agent/breakdsl/: dsl.go
lib/agent/breaktpl/: catalog.go  codegen.go
lib/agent/discovery/: inspect_elf.go  kallsyms_linux.go  kallsyms_stub.go  (+3 more)
lib/phantom-client/: Cargo.toml  build.rs
lib/phantom-client/src/: lib.rs
lib/proto/: debugger.proto
scripts/: e2e_http10_generic.sh  e2e_linux_bpf_env.sh  e2e_tcpdump_style_cli.sh  license-addlicense.sh
src/: README.md
src/agent/: main.go
src/cli/: Cargo.toml
src/cli/src/: main.rs
src/desktop/: README.md  index.html  package-lock.json  package.json  postcss.config.js  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
src/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src/desktop/src-tauri/capabilities/: default.json
src/desktop/src-tauri/icons/: icon.icns
src/desktop/src-tauri/src/: lib.rs  main.rs
test/e2e/: README.md  doc.go  execute_commands_test.go  grpc_api_test.go  helpers.go  http10_test.go  mcp_tools_test.go  minimal_hook_sources.go  scenarios_test.go  tcpdump_style_test.go
(+182 files in other folders)
