[package]
name = "phantom-client"
version = "0.1.0"
edition = "2021"
description = "gRPC client for Phantom debugger agent (shared by CLI and Tauri)"

[dependencies]
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

[build-dependencies]
tonic-build = "0.12"
