[package]
name = "phantom-cli"
version = "0.1.0"
edition = "2021"
description = "Phantom debugger REPL and discover commands (Rust)"

[[bin]]
name = "phantom-cli"
path = "src/main.rs"

[dependencies]
phantom-client = { path = "../../lib/phantom-client" }
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
